new folder for imgs

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div id="buttons">                   
                         <button class="joinNow-btn">Join Now</button>                   
                         <button id="tsCs-btn">
-                            <img src='arrow2.png'>
+                            <img src='imgs/arrow2.png'>
                             <span class="TsCs-text">Ts&Cs</span>                           
                         </button>
                         <button class="findOutMore-btn">Find out more</button>
@@ -72,7 +72,7 @@
                 </div>
                 <div id="buttons">
                     <button class="back-btn">
-                        <img src='arrow2.png'>
+                        <img src='imgs/arrow2.png'>
                         <span>Back</span>
                     </button>                
                     <button class="joinNowBack-btn">Join Now</button>  
